--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start":"node src/app.js",
-    "server": "nodemon src/app.js"
+    "server": "nodemon src/app.js -e js,json,hbs,css,html"
   },
   "keywords": [],
   "author": "",
